gitops-workshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-workshop-deployment
  labels:
    app: gitops-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-workshop
  template:
    metadata:
      labels:
        app: gitops-workshop
    spec:
      containers:
      - name: gitops-workshop-website
        image: moeluh1337/gitops-workshop:latest
        ports:
        - containerPort: 80
