gitops-workshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-workshop
  name: gitops-workshop-service
spec:
  type: ClusterIP
  selector:
    app: gitops-workshop
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
