gitops-workshop-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  labels:
    app: gitops-workshop
  name: gitops-workshop-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: gitops-workshop-service
          servicePort: 80
